Take out the "working on it" string when restoring logs

--- a/backup/restore_execute.html
+++ b/backup/restore_execute.html
@@ -253,7 +253,7 @@
 
     //Now create log entries as needed
     if ($status and ($restore->logs)) {
-        echo "<li>".get_string("creatinglogentries")."<b> (working on it!!)</b>";
+        echo "<li>".get_string("creatinglogentries");
         if (!$status = restore_create_logs($restore,$xml_file)) {
             notify("Could not restore logs!");
         }
