Updated help file for shortanswers explaining the wildcards

--- a/lang/en/help/quiz/shortanswer.html
+++ b/lang/en/help/quiz/shortanswer.html
@@ -7,4 +7,9 @@
    grade.  If the "Case sensitive" option is selected, then you can 
    have different scores for "Word" or "word".
 
-<P>Answers are compared exactly, so be careful with your spelling!
+<P>You can use the asterix character (*) as a <b>wildcard</b> to match 
+   any series of characters.  For example, use ran*ing to match any word
+   or phrase starting with "ran" and ending with "ing".  If you really 
+   do want to match an asterisk then use a backslash like this: \*
+
+<P>Without wildcards the answers are compared exactly, so be careful with your spelling!
