added help about the use of the * in shortanswer

--- a/lang/nl/help/quiz/shortanswer.html
+++ b/lang/nl/help/quiz/shortanswer.html
@@ -1,11 +1,12 @@
 <P ALIGN=CENTER><B>Kort antwoord vragen</B></P>
 
-<P>Als antwoord op de vraag (waarbij een afbeelding kan getoond worden) moet je een woord of een zin typen.
+<P>Als antwoord op de vraag (waarbij een afbeelding kan getoond worden) moet je een woord of een korte zin typen.
 </p>
 <p>
-Er kunnen meerdere mogelijke antwoorden gegeven worden, eventueel met verschillend puntenaantal. Antwoorden kunnen al dan
-niet hoofdlettergevoelig zijn. Als hoofdlettergevoeligheid is ingeschakeld, dan kun je verschillende scores toekennen
+Er kunnen meerdere mogelijke antwoorden gegeven worden, eventueel met een verschillende score. Antwoorden kunnen al dan
+niet hoofdlettergevoelig zijn. Als hoofdlettergevoeligheid is ingeschakeld, dan kun je verschillende scores toekennen aan
 "Nederlands" of "nederlands".
 </P>
+<p>Je kunt het asterixteken (*) als jokerteken gebruiken. Gebuik bijvoorbeeld be*ing om elk woord goed te keuren dat begint met "be" en eindigt met "ing". Als je echt een asterix als antwoord wil krijgen, gebruik dan de backslash op deze manier: \*
 
-<P>Antwoorden worden op de letter nagekeken. Wees dus voorzichtig met je spelling!</p>
+<P>Zonder jokertekens worden de antwoorden op de letter nagekeken. Wees dus voorzichtig met je spelling!</p>
