polished & translated some.

--- a/lang/ja/help/quiz/multichoice.html
+++ b/lang/ja/help/quiz/multichoice.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>複数解答方式</B></P>
+<P ALIGN=CENTER><B>多肢選択式問題</B></P>
 
 <P>質問(画像を掲載することも出来ます)に答える場合、解答者は複数の選択肢の中から
 解答を選びます。単一解答と複数解答の2つのタイプの複数解答方式があります。
