--- a/lang/ja/help/index.html
+++ b/lang/ja/help/index.html
@@ -100,13 +100,13 @@
 
 
 
-<p>クイズ</p>
+<p>小テスト</p>
 
 <ul>
 
-  <li><a href="help.php?module=quiz&file=review.html">クイズの終了後に1回の復習を許可する</a>
+  <li><a href="help.php?module=quiz&file=review.html">小テストの終了後に1回の復習を許可する</a>
 
-  <li><a href="help.php?module=quiz&file=attempts.html">クイズ挑戦回数</a>
+  <li><a href="help.php?module=quiz&file=attempts.html">小テスト挑戦回数</a>
 
   <li><a href="help.php?module=quiz&file=categories.html">カテゴリー</a>
 
@@ -124,7 +124,7 @@
 
   <li><a href="help.php?module=quiz&file=multichoice.html">複数解答方式</a>
 
-  <li><a href="help.php?module=quiz&file=timeopen.html">クイズ公開日・終了日</a>
+  <li><a href="help.php?module=quiz&file=timeopen.html">小テスト公開日・終了日</a>
 
   <li><a href="help.php?module=quiz&file=feedback.html">フィードバック</a>
 
