--- a/lang/ja/help/quiz/attempts.html
+++ b/lang/ja/help/quiz/attempts.html
@@ -1,6 +1,6 @@
-<P ALIGN=CENTER><B>クイズ挑戦回数</B></P>
+<P ALIGN=CENTER><B>小テスト挑戦回数</B></P>
 
-<P>学生に複数回クイズに挑戦させることが可能です。
+<P>学生に複数回小テストに挑戦させることが可能です。
 
-<P>単に課題を出すより、クイズを解くことで学習活動に役立てることが出来ます。
+<P>単に課題を出すより、小テストを解くことで学習活動に役立てることが出来ます。
 </P>
