--- a/lang/ja/help/quiz/random.html
+++ b/lang/ja/help/quiz/random.html
@@ -2,10 +2,10 @@
 
 <p>ランダム方式の質問は特別なタイプの質問です。</p>
 
-<p>クイズの中にランダム方式のクイズを入れた場合、質問はそれぞれの回で全てのカテゴリーからランダムに選ばれます。</p>
+<p>小テストの中にランダム方式の小テストを入れた場合、質問はそれぞれの回で全てのカテゴリーからランダムに選ばれます。</p>
 
-<p>ランダム方式クイズの最大評価は、常にランダム質問の評価として選んだものになります。</p>
+<p>ランダム方式小テストの最大評価は、常にランダム質問の評価として選んだものになります。</p>
 
-<p>例えば、10のランダム方式のクイズを作成した場合、それぞれの学生は完全に毎回異なる10の質問に答えることになります。</p>
+<p>例えば、10のランダム方式の小テストを作成した場合、それぞれの学生は完全に毎回異なる10の質問に答えることになります。</p>
 
 <p>特定の質問を常に含ませたい場合は、ランダム方式のランダム方式では無い方式の質問を混ぜることが出来ます。</p>
