--- a/lang/ja/help/mods.html
+++ b/lang/ja/help/mods.html
@@ -23,9 +23,9 @@
 <P>課題では教師が学生に対して、あらゆる形態のデジタルコンテンツをサーバにアップロードさせることが出来ます。典型的な課題にはエッセー、プロジェクト、レポート等があります。このモジュールには評価システムが含まれます。</P>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>クイズ</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>小テスト</B></P>
 <UL>
-<P>このモジュールでは教師が複数選択方式、○×式、記述式のクイズを作成することが出来ます。これらの質問は分類されたデータベースに保存され、コース間にまたがって再利用することが出来ます。クイズには複数回の挑戦が可能です。それぞれの挑戦は自動的に記録され、教師はフィードバックを与えたり、正解を表示することも出来ます。このモジュールには評価システムが含まれます。</P>
+<P>このモジュールでは教師が複数選択方式、○×式、記述式の小テストを作成することが出来ます。これらの質問は分類されたデータベースに保存され、コース間にまたがって再利用することが出来ます。小テストには複数回の挑戦が可能です。それぞれの挑戦は自動的に記録され、教師はフィードバックを与えたり、正解を表示することも出来ます。このモジュールには評価システムが含まれます。</P>
 </UL>
 
 <P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>選択</B></P>
