--- a/lang/ja/help/quiz/categories.html
+++ b/lang/ja/help/quiz/categories.html
@@ -1,13 +1,13 @@
 <P ALIGN=CENTER><B>カテゴリー</B></P>
 
-<P>大きなリストに全てのクイズを入れるより、クイズを分類するための
+<P>大きなリストに全ての小テストを入れるより、小テストを分類するための
 カテゴリーを作成したほうがよいでしょう。
 
 <P>カテゴリーには名称と説明が入ります。
 
 <P>それぞれのカテゴリーを「公開する」ことも出来ます。これはカテゴリーと
 それに含まれる質問が、このサーバに存在する全てのコースで利用可能であること
-を意味します。他のコースでもあなたの質問をクイズとして利用できます。
+を意味します。他のコースでもあなたの質問を小テストとして利用できます。
 
 <P>カテゴリーは作成・削除可能です。質問が入ったカテゴリーを削除する
 場合は、質問を他のカテゴリーに移動するか否かを尋ねられます。
