--- a/lang/ja/help/quiz/maxgrade.html
+++ b/lang/ja/help/quiz/maxgrade.html
@@ -1,8 +1,8 @@
 <P ALIGN=CENTER><B>最大評価</B></P>
 
-<P>あなたが設定したクイズの最大評価は全てのクイズの評価合計を意味します。</P>
+<P>あなたが設定した小テストの最大評価は全ての小テストの評価合計を意味します。</P>
 
-<P>例えば最大評価を20にした場合、クイズの評価割合は全体の中で20%になります。</P>
+<P>例えば最大評価を20にした場合、小テストの評価割合は全体の中で20%になります。</P>
 
-<P>満点50で10の質問があったとしても、クイズの最大評価は1問当たり
+<P>満点50で10の質問があったとしても、小テストの最大評価は1問当たり
 20にスケールダウンされます。</P>
