--- a/lang/ja/help/quiz/timeopen.html
+++ b/lang/ja/help/quiz/timeopen.html
@@ -1,6 +1,6 @@
-<P ALIGN=CENTER><B>クイズ公開日・終了日</B></P>
+<P ALIGN=CENTER><B>小テスト公開日・終了日</B></P>
 
-<P>クイズにいつからアクセス可能なのか設定することが出来ます。
+<P>小テストにいつからアクセス可能なのか設定することが出来ます。
 
-<P>公開日前と、終了日後ではクイズは利用できません。
+<P>公開日前と、終了日後では小テストは利用できません。
 </P>
