--- a/lang/fr/help/quiz/shortanswer.html
+++ b/lang/fr/help/quiz/shortanswer.html
@@ -1,17 +1,25 @@
 <p align="center"><b>Questions &agrave; r&eacute;ponse courte</b></p>
 
-<p>Pour r&eacute;pondre &agrave; une question &agrave; r&eacute;ponse courte, l'&eacute;tudiant
-saisit un mot ou une expression. L'enseignant peut permettre
-plusieurs r&eacute;ponses possibles, chacune accordant une note
-diff&eacute;rente.</p>
+<p>Pour r&eacute;pondre &agrave; une question &agrave; r&eacute;ponse courte (qui peut inclure
+une image), l'&eacute;tudiant saisit un mot ou une expression.</p>
+
+<p>L'enseignant peut permettre plusieurs r&eacute;ponses possibles,
+chacune accordant une note diff&eacute;rente.</p>
 
 <p>On peut exiger de respecter la casse ou non (lettres
 minuscules ou/et majuscules)&nbsp;; par exemple, si l'option
-<b>oui</b> est s&eacute;lectionn&eacute;e, les mots Fran&ccedil;ais et fran&ccedil;ais sont
-consid&eacute;rer comme diff&eacute;rents.</p>
+<b>La casse des caract&egrave;res doit &ecirc;tre respect&eacute;e</b> est
+s&eacute;lectionn&eacute;e, les mots Fran&ccedil;ais et fran&ccedil;ais sont
+consid&eacute;r&eacute;s comme diff&eacute;rents.</p>
 
-<p>On peut faire afficher une image avec la question.</p>
+<p>Vous pouvez utiliser le caract&egrave;re ast&eacute;risque (*) comme
+<b>joker</b> pour prendre la place d'une suite quelconque
+de caract&egrave;res. Par exemple, tapez &laquo;&nbsp;no*ion&nbsp;&raquo; permet d'accepter
+tous les mots commen&ccedil;ant par &laquo;&nbsp;no&nbsp;&raquo; et ceux finissant
+par &laquo;&nbsp;ion&nbsp;&raquo;. Si vous voulez mettre un v&eacute;ritable ast&eacute;risque
+dans vos r&eacute;ponse, tapez simplement une barre oblique inverse
+comme cela&nbsp;: \*</p>
 
-<p>Faites tr&egrave;s attention &agrave; l'orthographe des r&eacute;ponses, puisque
-Moodle comparera la r&eacute;ponse de l'&eacute;tudiant caract&egrave;re par caract&egrave;re
+<p>Attention &agrave; l'orthographe&nbsp;! Sans joker, Moodle comparera
+la r&eacute;ponse de l'&eacute;tudiant caract&egrave;re par caract&egrave;re
 avec les bonnes r&eacute;ponses.</p>
