--- a/lang/fr/help/enrolmentkey.html
+++ b/lang/fr/help/enrolmentkey.html
@@ -13,7 +13,7 @@
 
 <p>Il faut bien s&ucirc;r fournir cette clef d'acc&egrave;s aux &eacute;tudiants par
    un autre canal&nbsp;: courriel, courrier postal, t&eacute;l&eacute;phone
-   ou m&ecirc;me verbalement.</p>
+   ou m&ecirc;me oralement.</p>
 
 <p>Si la clef d'acc&egrave;s vient &agrave; &ecirc;tre divulgu&eacute;e
    et que des personnes ind&eacute;sirables se sont inscrites au cours, on peut
