Added link to Cloze

--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -95,6 +95,19 @@ using this import class.</p>
 <p align=right><a href="help.php?file=formatctm.html&module=quiz">More info about the "CTM" format</a></p>
 </UL>
 
+
+
+<P><B>Embedded answers (Cloze)</B></P>
+<UL>
+<P>This special purpose format imports just one type of question, the 
+Embedded Answers (also known as Cloze) format.
+</p>
+
+<p align=right><a href="help.php?file=multianswer.html&module=quiz">More info about the "Cloze" format</a></p>
+</UL>
+
+
+
 <P><B>Custom</B></P>
 <UL>
 <P>If you have your own format that you need to import, you can 
