Added references to WebCT format

--- a/lang/en/help/quiz/import.html
+++ b/lang/en/help/quiz/import.html
@@ -80,6 +80,15 @@ format.  It relies on XML functions being compiled into your PHP.</P>
 <p align=right><a href="help.php?file=formatblackboard.html&module=quiz">More info about the "Blackboard" format</a></p>
 </UL>
 
+
+<P><B>WebCT</B></P>
+<UL>
+<P>This module can import questions saved in WebCT's text-based format.</P>
+
+<p align=right><a href="help.php?file=formatwebct.html&module=quiz">More info about the "WebCT" format</a></p>
+</UL>
+
+
 <P><B>Course Test Manager</B></P>
 <UL>
 <P>This module can import questions saved in a Course Test Manager test bank.
