--- a/lang/en/help/quiz/index.html
+++ b/lang/en/help/quiz/index.html
@@ -15,6 +15,7 @@
   <li><a href="help.php?module=quiz&file=formatcustom.html">Importing custom quiz files</a>
   <li><a href="help.php?module=quiz&file=formatgift.html">Importing GIFT format files</a>
   <li><a href="help.php?module=quiz&file=formatmissingword.html">Importing "Missing Word" files</a>
+  <li><a href="help.php?module=quiz&file=formatwebct.html">Importing WebCT quiz files</a>
   <li><a href="help.php?module=quiz&file=match.html">Matching questions</a>
   <li><a href="help.php?module=quiz&file=maxgrade.html">Maximum grade</a>
   <li><a href="help.php?module=quiz&file=multichoice.html">Multiple choice questions</a>
