adding cloze link

--- a/lang/nl/help/quiz/import.html
+++ b/lang/nl/help/quiz/import.html
@@ -116,6 +116,13 @@ gebruikt.</p>
 <p align=right><a href="help.php?file=formatctm.html&module=quiz">Meer info over het "CTM" formaat</a></p>
 </UL>
 
+<P><B>Ingebedde antwoorden (Cloze)</B></P>
+<UL>
+<P>Met dit importformaat kun je slechts één soort vragen importeren: de ingebedde antwoorden (ook bekend als "cloze")
+<p align=right><a href="help.php?file=multianswer.html&module=quiz">Meer informatie over het "Cloze" formaat</a></p>
+</UL>
+ 
+
 
 <P><B>Aangepast</B></P>
 <UL>
