--- a/lang/nl/help/quiz/import.html
+++ b/lang/nl/help/quiz/import.html
@@ -101,6 +101,14 @@ op xml-functies die door PHP gecompileerd worden.</P>
 <p align=right><a href="help.php?file=formatblackboard.html&module=quiz">Meer info over "Blackboard" formaat</a></p>
 </UL>
 
+
+<P><B>WebCT</B></P>
+<UL>
+<P>Deze module kan vragen importeren vanuit het tekstgebaseerde vragenformaat van WebCT.</P>
+ 
+<p align=right><a href="help.php?file=formatwebct.html&module=quiz">Meer informatie over het "WebCT" formaat</a></p>
+</UL>
+
 <P><B>Course Test Manager</B></P>
 <UL>
 <P>Deze module kan vragen importeren die bewaard zijn in een Course Test Manager test bank.
