adding missing links

--- a/lang/nl/help/quiz/index.html
+++ b/lang/nl/help/quiz/index.html
@@ -17,6 +17,7 @@
   <li><a href="help.php?module=quiz&file=formatmissingword.html">Importeren van Gatentekst bestandsopmaak</a>
   <li><a href="help.php?module=quiz&file=formatgift.html">Importeren van Gift bestandsopmaak</a>
   <li><a href="help.php?module=quiz&file=import.html">Importeren van vragen uit een bestand</a>
+  <li><a href="help.php?module=quiz&file=formatwebct.html">Importeren van WebCT vragen</a>
   <li><a href="help.php?module=quiz&file=multianswer.html">Ingebedde antwoorden (Cloze)</a>
   <li><a href="help.php?module=quiz&file=match.html">Koppelvragen</a>
   <li><a href="help.php?module=quiz&file=shortanswer.html">Kort antwoord vragen</a>
