Few corrections and removing of not translated files.

--- a/lang/pl/help/lesson/grade.html
+++ b/lang/pl/help/lesson/grade.html
@@ -1,7 +1,6 @@
-<p align="center"><b>The Grade of the Lesson</b></p>
+<p align="center"><b>Ocena</b></p>
 
-<p>This value determines the maximum grade which can be awarded in 
-	the lesson.	The range is 0 to 100%. This value can be changed at 
-	any time during the lesson. Any change has an immediate effect in 
-	the Grades page and on the grades shown to the students in various 
-    lists.</p>
+<p>To maksymalna ocena, która mo¿e byæ przyznana na danej lekcji. Warto¶æ ta
+waha siê miêdzy 0 i 100% i mo¿e byæ zmieniona w ka¿dej chwili podczas trwania
+lekcji. Zmiana ta bêdzie natychmiast widoczna na stronie i odpowiednio wp³ynie 
+na oceny studentów.</p>
