--- a/lang/pl/help/lesson/mods.html
+++ b/lang/pl/help/lesson/mods.html
@@ -1,4 +1,4 @@
-<IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/lesson/icon.gif">&nbsp;<B>Lesson</B>
+<IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/lesson/icon.gif">&nbsp;<B>Lekcja</B>
 
 <UL>
 <P>Lekcja pozwala na przedstawienie tre¶ci w interesuj±cy sposób na wielu stronach.
