--- a/lang/pl/help/lesson/retake.html
+++ b/lang/pl/help/lesson/retake.html
@@ -1,16 +1,10 @@
-<p align="center"><b>Allowing the Students to Re-take the Lesson</b></p>
+<p align="center"><b>Powtórzenie lekcji</b></p>
 
-<p>This setting determines whether the students can take the lesson more than once
-    or only once. The teacher may decide that the lesson contains material which
-    the students ought to know throughly. In which case repeated viewings of the 
-    lesson should be allowed. If, however, the material is used more like an exam
-    then the students should not be allowed to re-take the lesson.</p>
+<p>Ten parametr determinuje czy student mo¿e powtórzyæ lekcje czy nie. 
+Warto skorzystaæ z tej opcji, je¶li okre¶lona lekcja jest istotna dla ca³ego kursu.</p>
 
-<p>When the students are allowed to re-take the lesson, the <b>grades</b> shown 
-    in the Grades page are the grades from their <b>best</b> attempts of the lesson. 
-    However, the <b>Question Analysis</b> always uses the answers from the 
-    first attempts of the lesson, subsequent attempts are ignored.</p>
+<p>Wybór tego parametru powoduje, ¿e <b>oceny</b> wy¶wietlone na stronie ocen, bêd± najlepszymi
+ocenami uzyskanymi ze wszystkich podej¶æ do danej lekcji. Jednak¿e, wybór opcji <b>Analiza pytañ</b> 
+zawsze bierze pod uwagê tylko oceny za pierwsze podej¶cie do pytania.</p>
 
-<p>By default this option is <b>Yes</b>, meaning that students are allowed to re-take
-    the lesson. It is expected that only in exceptional circumstances will this
-    option be set to <b>No</b>.
+<p>Domy¶lnie parametr ten ustawiony jest na <b>Tak</b>.</p>
