--- a/lang/pl/help/exercise/finalgrades.html
+++ b/lang/pl/help/exercise/finalgrades.html
@@ -1,10 +1,6 @@
-<P ALIGN=CENTER><B>The Final Grades</B></P>
+<P ALIGN=CENTER><B>Oceny koñcowe</B></P>
 
-<p>The table on this screen lists the overall grades and their breakdown. The first grade is
-	the grade for the (inital) assessment. This is added to the grades given to each 
-	submission. The Weights row gives the factors used in the calculation of the overall 
-	grade from these two grades. The final grade given for this assignment will either be 
-	the average of these overall grades or the overall grade of the best submission.
-
-<p>The League table lists each student's best submission. The table is in grade order with 
-	the best submission first.</p>
+<p>Pierwsza ocena w tabeli to ocena za pierwsz± wersjê pracy. Ocena ta jest dodawana do nastêpnych
+ocen za kolejne wersje pracy. Wagi z kolei, u¿ywane s± przy wyliczaniu ostateczniej oceny, u¿ywaj±c dwóch
+poprzednich ocen. Ostateczna ocena bêdzie albo ¶redni± ocen dyskutowanych wcze¶niej b±d¼ najlepsz± ocen± za 
+dan± wersjê pracy.</p>
