--- a/lang/pl/help/exercise/gradinggrade.html
+++ b/lang/pl/help/exercise/gradinggrade.html
@@ -1,15 +1,7 @@
-<P ALIGN=CENTER><B>Grading of Assessments</B></P>
+<P ALIGN=CENTER><B>Ocenianie prac</B></P>
 
-<p>In the first half of this page the Student Assessment of their own work is shown. 
-	This assessment should be graded (out of a maximum of 20). It represents an 
-	assessment of the work shown in the second of the Link boxes. (The topmost 
-	link box is the description of the exercise itself.) The &quot;Grading Grade&quot; 
-	should normally be explained in a comment which you enter in the Teacher's 
-	Comment box. The grade should reflect the accuracy of the assessment, an 
-	assessment which gives a low grade to a  poor piece of work should receive 
-	a higher Grading Grade than one which gives a low mark to a good piece of 
-	work, for example.</p>
+<p>Pierwsza po³owa strony przedstawia w³asn± ocenê studenta. Ta ocena powinna zostaæ oceniona
+(maksymalnie do 20 punktów). &quot;Ocena ocen&quot; 
+	powinna byæ uzasadniona w okienku w którym wpisuje siê komentarze nauczyciela.</p>
 	
-<p>In the second half of this page there is a blank Assessment Form for your 
-	own assessment of the piece of work from the student.</p>
-	
+<p>W drugiej czê¶ci strony jest forma w kórej mo¿esz dokonaæ w³asnej oceny pracy studenta.</p>	
