--- a/lang/pl/help/lesson/jumpto.html
+++ b/lang/pl/help/lesson/jumpto.html
@@ -1,13 +1,12 @@
-<p align="center"><b>The Jump-to Link</b></p>
+<p align="center"><b>Link Przejd¼ do</b></p>
 
-<p>Each answer has a Jump-to link. When this answer is chosen, the answer's response 
-    is shown to the student. Atfer that the student sees the page given in the Jump-to 
-    link. This link can be either relative or absolute. Relative links are <b>This 
-    page</b> and <b>Next page</b>. <b>This page</b> means that the student sees the 
-    current page again. <b>Next page</b> shows the page which follows this page in the
-    logical order of pages. An absolute page link is specified by choosing the page's 
-    <b>title</b>.</p>
-<p>Note that a (relative) <b>Next page</b> Jump-to link may show a different page 
-    after pages have been moved. Whereas Jump-to links which use page <b>titles</b>
-    always show the same page after pages have been moved.</p>
+<p>Ka¿da odpowied¼ zawiera link Przejd¼ do. Po wybraniu odpowiedzi, studentowi zostanie
+przedstawiona strona z informacj± zwrotn±. Po tym student widzi link Przejd¼ do. Link mo¿e byæ
+relatywny lub absolutny. Relatywne linki to: <b>Ta strona</b> i  <b>Nastêpna strona</b>. 
+<b>Ta strona</b> prowadzi raz jeszcze do strony któr± ogl±da student. <b>Nastêpna strona</b>
+prowadzi do nastêpnej strony w logicznym uk³adzie stron. Link absolutny z drugiej strony zawiera
+zawsze tytu³ strony.</p>
+<p>Zauwa¿, ¿e relatywny link <b>Nastêpna strona</b> mo¿e wskazaæ ró¿ne strony je¶li zmieniany by³
+porz±dek stron. Z drugiej strony linki opieraj±ce sie na <b>tytule</b>
+ zawsze odwo³uj± siê do okre¶lonej strony.</p>
 
