--- a/lang/pl/help/lesson/maxanswers.html
+++ b/lang/pl/help/lesson/maxanswers.html
@@ -1,7 +1,6 @@
-<p align="center"><b>The Maximum Number of Answers in a Lesson</b></p>
+<p align="center"><b>Maksymalna liczba odpowiedzi</b></p>
 
-<p>This value determines the maximum number of answers the teacher can use.
-    The default value is 4. If the lesson uses only TRUE or FALSE
-    questions throughout then it is sensible to set this value to 2.</p>
+<p>Ten parametr okre¶la maksymaln± liczbê odpowiedzi, któr± mo¿e zasugerowaæ nauczyciel. Domy¶lna warto¶æ to 4, ale
+je¶li u¿ywane s± tylko pytania typu PRAWDA/FA£SZ wówczas sensownym by³oby ustawienie tej warto¶ci na 2.</p>
     
-<p>It is safe to change this value in a lesson with existing content.</p>
+<p>Mo¿na bezpieczenie zmieniaæ ten parametr bez wzglêdu na zmieniaj±c± siê zawarto¶æ lekcji.</p>
