--- a/lang/nl/help/quiz/questiontypes.html
+++ b/lang/nl/help/quiz/questiontypes.html
@@ -7,7 +7,7 @@
 <UL>
 <P>Als antwoord op de vraag (waarbij een afbeelding kan getoond worden) krijg je meerdere mogelijkheden aangeboden. Er zijn twee types meerkeuzevragen vragen:
 slechts één antwoord of meerdere antwoorden toegestaan.
-<P>Meer informatie: <?php  helpbutton("multichoice", "", "quiz") ?></P>
+<p align=right><a href="help.php?file=multichoice.html&module=quiz">Meer informatie over meerkeuzevragen</a></P>
 </UL>
 
 <P><B>Kort antwoord</B></P>
@@ -16,7 +16,14 @@ slechts één antwoord of meerdere antwoorden toegestaan.
 Er kunnen meerdere mogelijke antwoorden gegeven worden, eventueel met verschillend puntenaantal. Antwoorden kunnen al dan
 niet hoofdlettergevoelig zijn.
 </P>
-<P>Meer informatie: <?php  helpbutton("shortanswer", "", "quiz") ?></P>
+<p align=right><a href="help.php?file=shortanswer.html&module=quiz">Meer informatie over kort antwoordvragen</a></P>
+</UL>
+
+<P><B>Nummeriek</B></P>
+<UL>
+<P>Voor de leerling ziet een nummerieke vraag er net uit als een kort antwoordvraag. Het verschil is dat een nummerieke vraag een foutenmarge toelaat op het juiste antwoord. Dit maakt het mogelijk om een opeenvolgende reeks antwoorden in te stellen.
+</P>
+<p align=right><a href="help.php?file=numerical.html&module=quiz">Meer informatie over nummeriek vragen</a></p>
 </UL>
 
 <P><B>Waar/Onwaar</B></P>
@@ -24,19 +31,40 @@ niet hoofdlettergevoelig zijn.
 <P>Als antwoord op de vraag (waarbij een afbeelding kan getoond worden) kun je uit twee mogelijkheden kiezen: waar of onwaar
 
 </P>
-<P>Meer informatie: <?php  helpbutton("truefalse", "", "quiz") ?></P>
+<p align=right><a href="help.php?file=truefalse.html&module=quiz">Meer informatie over waar/onwaar vragen</a></P>
 </UL>
 
-<P><B>Willekeurige set</B></P>
+
+<P><B>Koppelvragen</B></P>
 <UL>
-<P>Geeft je de mogelijkheid om een aantal vragen uit een grote set aan te bieden. Bij elke poging worden de 
-vragen willekeurig gekozen, zodat de leerling telkens een andere test krijgt aangeboden.
+<P>Er wordt een lijst vraagonderdelen met een lijst antwoorden ingegeven. De leerling moet het juiste antwoord aan elke vraag koppelen.
 </P>
-<P>Meer informatie: <?php  helpbutton("random", "", "quiz") ?></P>
+<p align=right><a href="help.php?file=match.html&module=quiz">Meer informatie over koppelvragen</a></p>
 </UL>
 
-<P><B>Willekeurig korte antwoorden paren</B></P>
+<P><B>Ingebedde antwoorden (Cloze)</B></P>
 <UL>
-<P>Geeft je de mogelijkheid om een aantal willekeurige korte antwoordvragen te presenteren als koppelvragen. </P>
+<p>Deze heel flexibele vragen bestaan uit een stuk tekst waarin verschillende antwoorden ingebed zitten, in meerkeuze, kort antwoord of nummerieke vorm.
+</P>
+<p align=right><a href="help.php?file=multianswer.html&module=quiz">Meer informatie over ingebedde antwoord vragen</a></p>
 </UL>
 
+<P><B>Willekeurige kort antwoordvragen koppelen</B></P>
+<UL>
+<P>Voor de leerling zien deze vragen er uit zoals koppelvragen. Het verschil is dat de deelvraagjes willekeurig gekozen worden uit de kort antwoordvragen die in de gekozen categorie voorkomen.
+</P>
+<p align=right><a href="help.php?file=randomsamatch.html&module=quiz">Meer informatie over koppelvragen</a></p>
+</UL>
+
+<P><B>Willekeurige set vragen</B></P>
+<UL>
+<P>Geeft je de mogelijkheid om een aantal vragen uit een grote set aan te bieden. Bij elke poging van de leerling worden de vragen willekeurig gekozen uit de opgegeven categorie, zodat de leerling telkens een andere test krijgt aangeboden.</P>
+<p align=right><a href="help.php?file=random.html&module=quiz">Meer informatie over willekeurige set vragen</a></p>
+</UL>
+
+<P><B>Beschrijving</B></P>
+<UL>
+<P>Dit is geen echte vraag. Het geeft je de mogelijkheid tekst, tekeningen of geluid te tonen tussen de vragen, zonder dat er een antwoord verwacht wordt. Deze functie kan gebruikt worden om wat informatie te voorzien die gebruikt kan worden bij een daarop volgende reeks vragen, bijvoorbeeld.
+</P>
+<p align=right><a href="help.php?file=description.html&module=quiz">Meer informatie over beschrijving</a></p>
+</UL>
