--- a/lang/nl/help/quiz/questiontypes.html
+++ b/lang/nl/help/quiz/questiontypes.html
@@ -19,11 +19,11 @@ niet hoofdlettergevoelig zijn.
 <p align=right><a href="help.php?file=shortanswer.html&module=quiz">Meer informatie over kort antwoordvragen</a></P>
 </UL>
 
-<P><B>Nummeriek</B></P>
+<P><B>numeriek</B></P>
 <UL>
-<P>Voor de leerling ziet een nummerieke vraag er net uit als een kort antwoordvraag. Het verschil is dat een nummerieke vraag een foutenmarge toelaat op het juiste antwoord. Dit maakt het mogelijk om een opeenvolgende reeks antwoorden in te stellen.
+<P>Voor de leerling ziet een numerieke vraag er net uit als een kort antwoordvraag. Het verschil is dat een numerieke vraag een foutenmarge toelaat op het juiste antwoord. Dit maakt het mogelijk om een opeenvolgende reeks antwoorden in te stellen.
 </P>
-<p align=right><a href="help.php?file=numerical.html&module=quiz">Meer informatie over nummeriek vragen</a></p>
+<p align=right><a href="help.php?file=numerical.html&module=quiz">Meer informatie over numeriek vragen</a></p>
 </UL>
 
 <P><B>Waar/Onwaar</B></P>
@@ -44,7 +44,7 @@ niet hoofdlettergevoelig zijn.
 
 <P><B>Ingebedde antwoorden (Cloze)</B></P>
 <UL>
-<p>Deze heel flexibele vragen bestaan uit een stuk tekst waarin verschillende antwoorden ingebed zitten, in meerkeuze, kort antwoord of nummerieke vorm.
+<p>Deze heel flexibele vragen bestaan uit een stuk tekst waarin verschillende antwoorden ingebed zitten, in meerkeuze, kort antwoord of numerieke vorm.
 </P>
 <p align=right><a href="help.php?file=multianswer.html&module=quiz">Meer informatie over ingebedde antwoord vragen</a></p>
 </UL>
