Changed french name of "survey" activity to "consultation" to avoid confusion

--- a/lang/fr/help/quiz/description.html
+++ b/lang/fr/help/quiz/description.html
@@ -3,7 +3,7 @@
 <p>Ce type n'est pas vraiment une question.</p>
 
 <p>Il permet d'afficher un bloc de texte &agrave;
-l'int&eacute;rieur d'un questionnaire sans que l'&eacute;tudiant
+l'int&eacute;rieur d'un test sans que l'&eacute;tudiant
 ait &agrave; r&eacute;pondre quoi que ce soit. On peut l'utiliser
 pour donner des directives pour les questions qui suivent.</p>
 
