--- a/lang/fr/help/quiz/questiontypes.html
+++ b/lang/fr/help/quiz/questiontypes.html
@@ -1,7 +1,7 @@
 <p align="center"><b>Cr&eacute;ation d'une nouvelle question</b></p>
 
 <p>Il existe dans Moodle de nombreux types de question pour
-l'&eacute;laboration de vos questionnaires&nbsp;:</p>
+l'&eacute;laboration de vos tests&nbsp;:</p>
 
 <p><b>Questions &agrave; choix multiples</b></p>
 
@@ -98,7 +98,7 @@ suppl&eacute;mentaires sur les questions al&eacute;atoires</a></p>
 <p><b>Descriptions</b></p>
 
 <p>Ce type de question n'en est pas vraiment un. Il sert &agrave;
-afficher un bloc de texte &agrave; l'int&eacute;rieur d'un questionnaire sans
+afficher un bloc de texte &agrave; l'int&eacute;rieur d'un test sans
 que l'&eacute;tudiant ait &agrave; r&eacute;pondre quoi que ce soit. On peut
 l'utiliser pour donner des directives pour les questions qui
 suivent.</p>
