--- a/lang/fr/help/quiz/randomsamatch.html
+++ b/lang/fr/help/quiz/randomsamatch.html
@@ -19,4 +19,4 @@ calcul de la note de la question.</p>
 <p>Les questions et les r&eacute;ponses sont tir&eacute;es al&eacute;atoirement de la
 cat&eacute;gorie d'o&ugrave; est issue la question al&eacute;atoire d'appariement.
 Cela signifie que chaque &eacute;tudiant aura une version diff&eacute;rente du
-questionnaire.</p>
+test.</p>
