--- a/lang/fr/help/survey/index.html
+++ b/lang/fr/help/survey/index.html
@@ -1,5 +1,5 @@
-<p>Questionnaires</p>
+<p>Consultations p&eacute;dagogiques</p>
 <ul>
-  <li><a href="help.php?file=surveys.html">Questionnaires disponibles</a> 
+  <li><a href="help.php?file=surveys.html">Consultations p&eacute;dagogiques disponibles</a> 
 </ul>
 
