--- a/lang/fr/help/survey/mods.html
+++ b/lang/fr/help/survey/mods.html
@@ -1,11 +1,10 @@
-<p><img valign="absmiddle" src="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<b>Questionnaires</b></p>
+<p><img valign="absmiddle" src="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<b>Consultations p&eacute;dagogiques</b></p>
 
 <ul>
-<p>Le module des questionnaires d'&eacute;valuation pour
-environnements en ligne fournit un certain nombre d'instruments
-qui se sont av&eacute;r&eacute;s tr&egrave;s utiles et
-tr&egrave;s stimulants. Les enseignants peuvent les employer pour
-recueillir des donn&eacute;es qui les informeront sur leurs
+<p>Le module consultations p&eacute;dagogiques fournit un certain
+nombre d'instruments qui se sont av&eacute;r&eacute;s tr&egrave;s utiles et
+tr&egrave;s stimulants pour environnements en ligne. Les enseignants
+peuvent les employer pour recueillir des donn&eacute;es qui les informeront sur leurs
 &eacute;tudiants et ainsi r&eacute;fl&eacute;chir sur leur propre
 enseignement.</p>
 </ul>
