--- a/lang/fr/help/surveys.html
+++ b/lang/fr/help/surveys.html
@@ -1,32 +1,35 @@
-<p align="center"><b>Questionnaires disponibles</b></p>
+<p align="center"><b>Consultations p&eacute;dagogiques disponibles</b></p>
 
 <p>Moodle n'offre actuellement que certains types sp&eacute;cifiques
 de questionnaires d'&eacute;valuation pr&eacute;d&eacute;finis (une version
 ult&eacute;rieure vous permettra de cr&eacute;er vos propres
 questionnaires).</p>
 
-<p>Les questionnaires propos&eacute;s ont &eacute;t&eacute; choisis
+<p>Les consultations propos&eacute;es ont &eacute;t&eacute; choisies
 sp&eacute;cialement pour leur habilit&eacute; &agrave;
 &eacute;valuer des environnements d'apprentissage en ligne utilisant
-la p&eacute;dagogie constructiviste. Ils permettent d'identifier
+la p&eacute;dagogie constructiviste. Elles permettent d'identifier
 certaines tendances dans les interactions entre les
 participants &agrave; vos cours.
 
 (L'article suivant d&eacute;crit une utilisation d&eacute;taill&eacute;e
 de ces instruments&nbsp;: <a target="paper" href="http://dougiamas.com/writing/herdsa2002">http://dougiamas.com/writing/herdsa2002</a>.)</p>
 
-<hr>
-<p><b>COLLES - Constructivist On-Line Learning Environment Survey</b></p>
+<hr />
+
+<p><b>COLLES - Consultation sur les environnements d'apprentissage constructivistes
+en ligne (Constructivist On-Line Learning Environment Survey)</b></p>
 <ul>
-	<p>Le questionnaire COLLES comprend 24 &eacute;nonc&eacute;s regroup&eacute;s
+	<p>La &laquo;&nbsp;Consultation sur les environnements d'apprentissage constructivistes
+	en ligne&nbsp;&raquo; (COLLES) comprend 24 &eacute;nonc&eacute;s regroup&eacute;s
 	en fonction de six crit&egrave;res, chacun &eacute;valuant un aspect
 	clef de l'environnement d'apprentissage en ligne.</p>
-	<table width="500" border="0" cellpadding="10" cellspacing="0">
+    <p><table width="500" border="0" cellpadding="10" cellspacing="0">
 		<col width="125">
 		<col width="375">
 		<tr>
 			<td width="125" valign="top">
-				Pertinence</td>
+				<b>Pertinence</b></td>
 			<td width="375">
 				Est-ce que les apprentissages en ligne sont pertinents pour le
 				travail futur des &eacute;tudiants&nbsp;? 
@@ -34,17 +37,16 @@ de ces instruments&nbsp;: <a target="paper" href="http://dougiamas.com/writing/h
 		</tr>
 		<tr>
 			<td width="125" valign="top">
-				Sens critique 
+				<b>Sens critique</b>
 			</td>
 			<td width="375">
 				Est-ce que l'environnement d'apprentissage en ligne permet de
 				d&eacute;velopper davantage le sens critique des &eacute;tudiants&nbsp;?
-				 
 			</td>
 		</tr>
 		<tr>
 			<td width="125" valign="top">
-				Interactivit&eacute; 
+				<b>Interactivit&eacute;</b> 
 			</td>
 			<td width="375">
 				Dans quelle mesure les &eacute;tudiants s'engagent-ils dans
@@ -53,7 +55,7 @@ de ces instruments&nbsp;: <a target="paper" href="http://dougiamas.com/writing/h
 		</tr>
 		<tr>
 			<td width="125" valign="top">
-				Soutien par le tuteur</td>
+				<b>Soutien par le tuteur</b></td>
 			<td width="375">
 				Dans quelle mesure les tuteurs encouragent-ils les &eacute;tudiants
 				&agrave; participer dans les &eacute;changes virtuels&nbsp;? 
@@ -61,7 +63,7 @@ de ces instruments&nbsp;: <a target="paper" href="http://dougiamas.com/writing/h
 		</tr>
 		<tr>
 			<td width="125" valign="top">
-				Soutien par les pairs 
+				<b>Soutien par les pairs</b> 
 			</td>
 			<td width="375">
 				Dans l'environnement en ligne, est-ce que les pairs
@@ -70,70 +72,80 @@ de ces instruments&nbsp;: <a target="paper" href="http://dougiamas.com/writing/h
 		</tr>
 		<tr>
 			<td width="125" valign="top">
-				<p>Communication 
+				<b>Communication</b> 
 			</td>
 			<td width="375">
-				<p>Est-ce que la communication entre les tuteurs et les &eacute;tudiants
+				Est-ce que la communication entre les tuteurs et les &eacute;tudiants
 				est bonne, pr&eacute;cise et aidante&nbsp;?</td>
 		</tr>
-	</table>
-	<p></p>
+	</table></p>
+
 	<p>Le fondement de la vision de l'apprentissage qui guide le
 	d&eacute;veloppement de Moodle est une th&eacute;orie de l'apprentissage appel&eacute;e
-	le socio-constructivisme, qui d&eacute;peint l'&eacute;tudiant comme un acteur
+	le socio-constructivisme, qui d&eacute;peint l'&eacute;tudiant comme un participant
 	actif dans un environnement d'&eacute;tude socialement interactif. Le
 	socio-constructivisme est une fa&ccedil;on d'apprendre o&ugrave; les &eacute;tudiants
 	collaborent pour construire de nouveaux savoirs, particuli&egrave;rement
 	dans le contexte d'un questionnement mutuel ancr&eacute; dans leur
 	exp&eacute;rience personnelle.</p>
+	
 	<p>Le point central de cette collaboration est le d&eacute;veloppement
 	de la comp&eacute;tence communicative des &eacute;tudiants, c'est-&agrave;-dire la
 	capacit&eacute; de s'engager dans le discours ouvert et critique avec
-	le professeur et des pairs. Ce discours est caract&eacute;ris&eacute; par une
+	l'enseignant et avec des pairs. Ce discours est caract&eacute;ris&eacute; par une
 	orientation empathique &agrave; construire la compr&eacute;hension r&eacute;ciproque,
-	et une attitude critique envers des
-	pr&eacute;tentions fondamentales examinantes.</p>
+	et une attitude critique envers des pr&eacute;tentions fondamentales examinantes.</p>
+	
 	<p>Le COLLES a &eacute;t&eacute; con&ccedil;u pour vous permettre de surveiller
-	le point auquel vous pouvez exploiter la capacit&eacute; interactive
-	du Web pour engager des &eacute;tudiants dans des pratiques d'&eacute;tude
+	&agrave; quel point vous pouvez exploiter la capacit&eacute; interactive
+	du Web pour engager des &eacute;tudiants dans des processus d'apprentissage
 	dynamiques.</p>
-	<p>(cette information a &eacute;t&eacute; adapt&eacute;e de la page de COLLES. Vous pouvez
-    d&eacute;couvrir plus au sujet de COLLES et les auteurs de lui sur
-	<a href="http://surveylearning.com/colles/" target="paper">http://surveylearning.com/colles/</a>)</p>
+	
+	<p>(Cette information a &eacute;t&eacute; adapt&eacute;e de la page de COLLES.
+	Vous pouvez d&eacute;couvrir plus au sujet de COLLES et ses auteurs sur
+	<a href="http://surveylearning.com/colles/"
+	target="_blank">http://surveylearning.com/colles/</a>)</p>
+</ul>
 
-<hr>
-<p><b>ATTLS - Attitudes to Thinking and Learning Survey</b></p>
+<hr />
+
+<p><b>ATTLS - Consultation sur les Attitudes envers la r&eacute;flexion et
+	l'apprentissage (Attitudes to Thinking and Learning Survey)</b></p>
 <ul>
 
-<p>The theory of 'ways of knowing', originally from the field of gender research
-(Belenky et al., 1986) provides us with a survey tool to examine the quality of
-discourse within a collaborative environment. 
-
-<p>The Attitudes Towards Thinking and Learning Survey (ATTLS) is an instrument
-developed by Galotti et al. (1999) to measure the extent to which a person is a
-'connected knower' (CK) or a 'separate knower' (SK). 
-
-<p>People with higher CK scores tend to find learning more enjoyable, and are
-often more cooperative, congenial and more willing to build on the ideas of
-others, while those with higher SK scores tend to take a more critical and
-argumentative stance to learning. 
-
-<p>Studies have shown that these two learning styles are independent of each
-other (Galotti et al., 1999; Galotti et al., 2001). Additionally, they are only
-a reflection of learning attitudes, not learning capacities or intellectual
-power. 
-
-<p><i>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., &amp; Tarule, J. M.
-(1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New
-York: Basic Books, Inc. </i></p>
-
-<p><i>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., &amp; Mansfield,
-A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards
-Thinking and Learning Survey (ATTLS). Sex Roles, 40(9/10), 745-766.</i></p>
-
-<p><i>Galotti, K. M., Reimer, R. L., &amp; Drebus, D. W. (2001). Ways of knowing
-as learning styles: Learning MAGIC with a partner. Sex Roles, 44(7/8),
-419-436.</i></p>
-
+	<p>La th&eacute;orie sur les &laquo;&nbsp;mani&egrave;res de savoir&nbsp;&raquo;,
+	qui puise ses origines dans la recherche sur les genres (Belenky et al., 1986),
+	fournit un instrument d'&eacute;valuation permettant d'examiner la qualit&eacute;
+	du discours dans un environnement collaboratif.</p>
+	
+	<p>La &laquo;&nbsp;Consultation sur les attitudes envers la r&eacute;flexion et
+	l'apprentissage&nbsp;&raquo; (ATTLS) est un instrument d&eacute;velopp&eacute;
+	par Galotti et al. (1999) pour mesurer &agrave; quel point une personne est
+	un &laquo;&nbsp;knower li&eacute;&nbsp;&raquo; (CK = connected knower) ou un
+	&laquo;&nbsp;knower d&eacute;tach&eacute;&nbsp;&raquo; (SK = separated knower). 
+	
+	<p>Les personnes avec un score CK &eacute;lev&eacute; trouvent
+	g&eacute;n&eacute;ralement plus de plaisir dans l'apprentissage et sont
+	en g&eacute;n&eacute;ral plus enclin &agrave; collaborer, empathiques et
+	acceptent plus facilement de construire &agrave; partir des id&eacute;es des autres. En
+	revanche, ceux qui ont un score SK plus &eacute;lev&eacute; ont en
+	g&eacute;n&eacute;ral une approche plus critique et argumentative de l'apprentissage.</p>
+	
+	<p>Des &eacute;tudes ont montr&eacute; que ces deux styles d'apprentissage sont
+	ind&eacute;pendants l'un de l'autre (Galotti et al., 1999; Galotti et al., 2001).
+	En outre, ils ne constituent qu'une r&eacute;flexion sur les attitudes
+	d'apprentissage, et non sur les capacit&eacute;s d'apprentissage ou sur l'intelligence.</p>
+	
+	<p><i>Belenky, M. F., Clinchy, B. M., Goldberger, N. R., &amp; Tarule, J. M.
+	(1986). Women's Ways of Knowing: The Development of Self, Voice, and Mind. New
+	York: Basic Books, Inc. </i></p>
+	
+	<p><i>Galotti, K. M., Clinchy, B. M., Ainsworth, K., Lavin, B., &amp; Mansfield,
+	A. F. (1999). A New Way of Assessing Ways of Knowing: The Attitudes Towards
+	Thinking and Learning Survey (ATTLS). Sex Roles, 40(9/10), 745-766.</i></p>
+	
+	<p><i>Galotti, K. M., Reimer, R. L., &amp; Drebus, D. W. (2001). Ways of knowing
+	as learning styles: Learning MAGIC with a partner. Sex Roles, 44(7/8),
+	419-436.</i></p>
 
 </ul>
