--- a/lang/fr/help/quiz/createmultiple.html
+++ b/lang/fr/help/quiz/createmultiple.html
@@ -4,20 +4,20 @@ al&eacute;atoires</b></p>
 <p>Cette commande vous permet de cr&eacute;er un jeu de questions
 tir&eacute;es au hasard dans la cat&eacute;gorie que vous aurez
 choisie. Cet ensemble peut &ecirc;tre ajout&eacute; &agrave; un
-questionnaire. Vous devez donner le nombre de questions &agrave;
+test. Vous devez donner le nombre de questions &agrave;
 inclure dans cet ensemble.</p>
 
-<p>Vous pouvez ainsi cr&eacute;er un questionnaire qui serait
+<p>Vous pouvez ainsi cr&eacute;er un test qui serait
 enti&egrave;rement g&eacute;n&eacute;r&eacute; au hasard et qui
 serait diff&eacute;rent pour chaque &eacute;tudiant. Plus le
 nombre de questions dans la cat&eacute;gorie est grand, plus les
-questionnaires g&eacute;n&eacute;r&eacute;s seront
+tests g&eacute;n&eacute;r&eacute;s seront
 diff&eacute;rents les uns des autres.</p>
 
 <p>Vous pouvez &eacute;galement inclure cet ensemble de questions
-al&eacute;atoires dans un questionnaire de fa&ccedil;on &agrave;
+al&eacute;atoires dans un test de fa&ccedil;on &agrave;
 ce qu'une partie seulement du test soit al&eacute;atoire.</p>
 
 <p>Il est important que les questions servant &agrave;
-&eacute;tablir un questionnaire construit al&eacute;atoirement
+&eacute;tablir un test construit al&eacute;atoirement
 soient de m&ecirc;me niveau.</p>
